--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Cross platform enabled Client Software using electron for The_Orb ( Decentralized FaaS provider)",
   "main": "main.js",
   "dependencies": {
+    "angular": "^1.7.2",
     "codeflask": "^1.1.0",
     "electron-reload": "^1.2.2",
     "express": "^4.16.3",
     "js-interpreter": "^1.4.6",
     "node": "^10.4.1",
-    "sweetalert": "^2.1.0",
-    "node-sentiment": "0.0.6"
+    "node-sentiment": "0.0.6",
+    "sweetalert": "^2.1.0"
   },
   "devDependencies": {
     "angular-route": "^1.7.2",
