--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "main": "main.js",
   "dependencies": {
     "angular": "^1.7.2",
+    "angular-local-storage": "^0.7.1",
+    "angular-socket-io": "^0.7.0",
     "axios": "^0.18.0",
     "codeflask": "^1.1.0",
     "electron-reload": "^1.2.2",
     "execution-time": "^1.2.0",
     "express": "^4.16.3",
     "js-interpreter": "^1.4.6",
+    "lodash": "^4.17.10",
     "node": "^10.4.1",
     "node-sentiment": "0.0.6",
+    "socket.io": "^2.0.4",
     "socket.io-client": "^2.1.1",
     "sweetalert": "^2.1.0"
   },
