--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "node-sentiment": "0.0.6",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.1.1",
-    "sweetalert": "^2.1.0"
+    "sweetalert": "^2.1.0",
+    "sweetalert2": "^7.26.29"
   },
   "devDependencies": {
     "angular-route": "^1.7.2",
